# gingrwrapp

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  run.sh
gingrwrapp/: __init__.py  asgi.py  client.py  response_objects.py  settings.py  urls.py  wsgi.py
gingrwrapp/client/: client.py  response_objects.py  tests.py
tests/: test_client.py
